<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChiralCaptchaActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topAppBar"
            app:title="@string/app_name"
            app:elevation="0dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_previous_molecule"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/previous"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/ic_navigate_prev_24"
                    android:drawableTint="@color/drawable_bg"
                    />

                <Button
                    android:id="@+id/btn_next_molecule"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_mol"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/ic_navigate_next_24"
                    android:drawableTint="@color/drawable_bg"
                    />

            </LinearLayout>

            <com.cwuom.chiralcaptcha.chiral.carbon.MoleculeView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/moleculeView"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/loading"
                android:padding="50dp"
                android:textSize="20sp"
                />


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cut_out_bg"
                android:layout_marginTop="@dimen/view_margin_normal_spacing"
                android:layout_marginStart="@dimen/view_margin_small_spacing"
                android:layout_marginEnd="@dimen/view_margin_small_spacing"
                />


            <Button
                android:id="@+id/btn_check"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check"
                android:textStyle="bold"
                android:fontFamily="@font/arbutus_slab"
                android:textColor="?android:textColorPrimary"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/cut_out_bg"
                android:layout_marginStart="@dimen/view_margin_small_spacing"
                android:layout_marginEnd="@dimen/view_margin_small_spacing"
                />

            <Button
                android:id="@+id/btn_start"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/text_sub_color"
                />


        </LinearLayout>

    </ScrollView>





</LinearLayout>